--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,11 @@
     "@emotion/styled": "^11.14.1",
     "@mui/material": "^7.3.4",
     "@stripe/react-stripe-js": "^5.2.0",
-    "@stripe/stripe-js": "^8.0.0",
+    "@stripe/stripe-js": "^8.1.0",
+    "body-parser": "^2.2.0",
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
+    "express": "^5.1.0",
     "ldrs": "^1.1.7",
     "react": "^19.1.1",
     "react-chartjs-2": "^5.3.0",
@@ -25,7 +29,9 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.4",
     "react-slick": "^0.31.0",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "stripe": "^19.1.0",
+    "sweetalert2": "^11.26.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
