--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,7 @@
     "react-router-dom": "^7.9.4",
     "react-slick": "^0.31.0",
     "slick-carousel": "^1.8.1",
+    "socket.io-client": "^4.8.1",
     "stripe": "^19.1.0",
     "sweetalert2": "^11.26.3"
   },
