--- a/backend/package.json
+++ b/backend/package.json
@@ -7,14 +7,21 @@
     "start": "nodemon index.js"
   },
   "dependencies": {
+    "@bull-board/api": "^6.14.0",
+    "@bull-board/express": "^6.14.0",
+    "@bull-board/nestjs": "^6.14.0",
+    "@bull-board/ui": "^6.14.0",
     "bcrypt": "^6.0.0",
     "body-parser": "^2.2.0",
+    "bull": "^4.16.5",
+    "bullmq": "^5.63.0",
     "cloudinary": "^2.7.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "express-session": "^1.18.2",
+    "ioredis": "^5.8.2",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^5.8.0",
     "mongoose": "^8.19.1",
@@ -25,7 +32,9 @@
     "passport-google-oauth20": "^2.0.0",
     "react-hook-form": "^7.65.0",
     "react-hot-toast": "^2.6.0",
+    "redis": "^5.9.0",
     "socket.io": "^4.8.1",
-    "stripe": "^19.1.0"
+    "stripe": "^19.1.0",
+    "uuid": "^13.0.0"
   }
 }
