--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "express": "^5.1.0",
     "ldrs": "^1.1.7",
     "react": "^19.1.1",
+    "react-calendar": "^6.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.65.0",
