--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,8 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "nodemon index.js",
+    "workers": "ts-node ./workers/index.ts"
   },
   "dependencies": {
     "@bull-board/api": "^6.14.0",
@@ -36,5 +37,9 @@
     "socket.io": "^4.8.1",
     "stripe": "^19.1.0",
     "uuid": "^13.0.0"
+  },
+  "devDependencies": {
+    "ts-node": "^10.9.2",
+    "typescript": "^5.9.3"
   }
 }
