--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon index.js",
-    "workers": "ts-node ./workers/index.ts"
+    "workers": "node ./workers/index.js"
   },
   "dependencies": {
     "@bull-board/api": "^6.14.0",
