--- a/backend/package.json
+++ b/backend/package.json
@@ -36,7 +36,8 @@
     "redis": "^5.9.0",
     "socket.io": "^4.8.1",
     "stripe": "^19.1.0",
-    "uuid": "^13.0.0"
+    "uuid": "^13.0.0",
+    "web-push": "^3.6.7"
   },
   "devDependencies": {
     "ts-node": "^10.9.2",
