--- a/backend/package.json
+++ b/backend/package.json
@@ -16,7 +16,7 @@
     "body-parser": "^2.2.0",
     "bull": "^4.16.5",
     "bullmq": "^5.63.0",
-    "cloudinary": "^2.7.0",
+    "cloudinary": "^2.8.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
@@ -24,6 +24,7 @@
     "express-session": "^1.18.2",
     "ioredis": "^5.8.2",
     "jsonwebtoken": "^9.0.2",
+    "jspdf": "^3.0.3",
     "mongodb": "^5.8.0",
     "mongoose": "^8.19.1",
     "nodemailer": "^7.0.9",
@@ -31,6 +32,7 @@
     "passport": "^0.7.0",
     "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0",
+    "pdfkit": "^0.17.2",
     "react-hook-form": "^7.65.0",
     "react-hot-toast": "^2.6.0",
     "redis": "^5.9.0",
