--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "jspdf": "^3.0.3",
     "ldrs": "^1.1.7",
     "react": "^19.1.1",
     "react-calendar": "^6.0.0",
