--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "express": "^5.1.0",
     "jspdf": "^3.0.3",
     "ldrs": "^1.1.7",
+    "lucide-react": "^0.553.0",
     "react": "^19.1.1",
     "react-calendar": "^6.0.0",
     "react-chartjs-2": "^5.3.0",
@@ -43,10 +44,13 @@
     "@types/react": "^19.1.16",
     "@types/react-dom": "^19.1.9",
     "@vitejs/plugin-react-swc": "^4.1.0",
+    "autoprefixer": "^10.4.22",
     "eslint": "^9.36.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.22",
     "globals": "^16.4.0",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.17",
     "vite": "^7.1.10"
   }
 }
