--- a/backend/package.json
+++ b/backend/package.json
@@ -33,6 +33,7 @@
     "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0",
     "pdfkit": "^0.17.2",
+    "qrcode": "^1.5.4",
     "react-hook-form": "^7.65.0",
     "react-hot-toast": "^2.6.0",
     "redis": "^5.9.0",
