--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,8 +22,10 @@
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "jspdf": "^3.0.3",
+    "jsqr": "^1.4.0",
     "ldrs": "^1.1.7",
     "lucide-react": "^0.553.0",
+    "qrcode.react": "^4.2.0",
     "react": "^19.1.1",
     "react-calendar": "^6.0.0",
     "react-chartjs-2": "^5.3.0",
